-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2011 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.0
-----------------

3/31/11
    - Default value for ramp rates for dispatchable loads now
      set to Inf in load2disp.m.

3/18/11
    - Fixed bug in toggle_reserves.m that computed the prices in
      results.reserves.prc incorrectly.


Changes since 4.0b5
-------------------

2/16/11
    - Oops! Neglected to include Carlos as co-author on User's Manual.
      Updated 4.0 distribution and web-site with corrected manual.pdf.
      Sorry about that Carlos!

2/7/11
    - Released version 4.0.

1/18/11
    - Added 'quadprog_ls' option to have_fcn() to check for availability
      of version of quadprog() with large scale solver.
    - Modified qps_ot() to set default options based on capabilities
      of version of Optimization Toolbox.

12/16/10
    - Fixed bug in qps_cplex() where an infeasible problem resulted
      in a fatal error.
    - Fixed bug in qps_mosek() where exit flag was indicating success
      for infeasible solutions.
    - Fixed bug in dcopf_solver() where an infeasible problem found
      by CPLEX would result in a fatal error.


Changes since 4.0b4
-------------------

12/13/10
    - Released version 4.0b5.

12/2/10
    - Added to opf_setup() a better check on when specified generalized
      cost parameters are compatible with DC OPF.
    - Improved output of t_is(). Includes only elements violating
      tolerance.

11/30/10
    - Fixed bug in opf_execute() related to automatic conversion of
      single-block piecewise linear costs to linear polynomial costs.
      Affected indexing of the Va, Vm, Pg and Qg portions of
      results.x and raw.xr.

11/24/10
    - Added support for the MOSEK optimizer for large-scale linear and